# ChangeLog for dev-ruby/hpricot
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hpricot/ChangeLog,v 1.10 2008/07/07 18:42:52 bluebird Exp $

  07 Jul 2008; Friedrich Oslage <bluebird@gentoo.org> hpricot-0.6.ebuild:
  Add ~sparc keyword, bug #230517

  18 Jun 2008; Christian Faulhammer <opfer@gentoo.org> hpricot-0.6.ebuild:
  stable x86, bug 225327

  08 Jun 2008; Hans de Graaff <graaff@gentoo.org> hpricot-0.6.ebuild:
  Stable on amd64, bug #225327

  13 Sep 2007; Markus Meier <maekke@gentoo.org> hpricot-0.5.ebuild:
  stable on x86, wrt bug #191586

  09 Sep 2007; Christoph Mende <angelos@gentoo.org> hpricot-0.5.ebuild:
  Stable on amd64 wrt bug #191586

*hpricot-0.6 (07 Sep 2007)

  07 Sep 2007; Hans de Graaff <graaff@gentoo.org> +hpricot-0.6.ebuild:
  Version bump.

  13 Apr 2007; Robin H. Johnson <robbat2@gentoo.org> hpricot-0.5.ebuild:
  Add ~ppc and ~amd64 so I use this at work.

  13 Mar 2007; Tom Gall <tgall@gentoo.org> hpricot-0.5.ebuild:
  added ~ppc64

*hpricot-0.5 (04 Feb 2007)

  04 Feb 2007; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org> +metadata.xml,
  +hpricot-0.5.ebuild:
  Initial ebuild by Aggelos Orfanakos <agorf@void.gr>, #146373
