@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hpricot/Attic/hpricot-0.6.ebuild,v 1.4 2008/07/07 18:42:52 bluebird Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hpricot/Attic/hpricot-0.6.ebuild,v 1.5 2008/07/08 01:52:28 the_paya Exp $
 
 inherit ruby gems
 
@@ -12,7 +12,7 @@ SRC_URI="http://gems.rubyforge.org/gems/${P}.gem"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="amd64 ~ppc ~ppc64 ~sparc x86"
+KEYWORDS="amd64 ~ppc ~ppc64 ~sparc x86 ~x86-fbsd"
 IUSE=""
 
 DEPEND=""
