@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mechanize/Attic/mechanize-0.7.6.ebuild,v 1.2 2008/07/07 18:48:30 bluebird Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mechanize/Attic/mechanize-0.7.6.ebuild,v 1.3 2008/07/08 01:54:38 the_paya Exp $
 
 inherit ruby gems
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://mechanize.rubyforge.org/"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~sparc ~x86"
+KEYWORDS="~amd64 ~ppc ~sparc ~x86 ~x86-fbsd"
 IUSE=""
 
 DEPEND=">=dev-ruby/hpricot-0.5.0
