@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/hpricot
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hpricot/ChangeLog,v 1.10 2008/07/07 18:42:52 bluebird Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hpricot/ChangeLog,v 1.11 2008/07/08 01:52:28 the_paya Exp $
+
+  08 Jul 2008; Javier Villavicencio <the_paya@gentoo.org>
+  hpricot-0.6.ebuild:
+  Added ~x86-fbsd keyword.
 
   07 Jul 2008; Friedrich Oslage <bluebird@gentoo.org> hpricot-0.6.ebuild:
   Add ~sparc keyword, bug #230517
